--- a/experiment/style.css
+++ b/experiment/style.css
@@ -1,14 +1,17 @@
-body {
+body{
     overflow: hidden;
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: aquamarine;
+    background-color:black;
 }
 
-#renderCanvas {
-    width: 100%;
-    height: 100%;
-    touch-action: none;
-}
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-30%, -15%);
+    font-size: 65px;
+    color: white;
+  }
